# SQLParrot

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENVIRONMENT_SETUP.md  LICENSE  METADATA_STORAGE_SYSTEM.md  README.md  SNAPSHOT_RESTORE_BEHAVIOR.md  SQL Parrot - Starting Project Prompt.md  SQL_PARROT_TECHNICAL_ANALYSIS.md  TODO.md  codecov.yml  docker-compose.example.yml  env.example  eslint.config.js  jest.config.js  package-lock.json  package.json  setup-env.cmd  setup-env.ps1  setup-env.sh  start-dev.bat  start-dev.cmd  start-prod.cmd  stop-dev.cmd
.cursor/: mcp.json
.github/: dependabot.yml
__mocks__/: mssql.js
backend/: config.json  env.example  eslint.config.js  package-lock.json  package.json  server.js
data/: groups.json  history.json  settings.json
docs/: DEV_SERVER_GUIDE.md  RELEASES.md  RELEASE_STRATEGY.md  SNAPSHOT_BEHAVIOR.md  TAURI.md  VERSION_BUMP_CHECKLIST.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh  install.nsh  uninstall.nsh
src-tauri/resources/: sqlparrot.db
src-tauri/scripts/: create-bundled-db.rs  patch-nsis-installer.js
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: connection.rs  groups.rs  mod.rs  profiles.rs  settings.rs  snapshots.rs
src-tauri/src/db/: metadata.rs  mod.rs  sqlserver.rs
src-tauri/wix/: main.wxs.template
tests/: setup.js  (+11 more)
(+63 files in other folders)
