[package]
name = "sql-parrot"
version = "1.1.0"
description = "SQL Server Snapshot Manager - Desktop Application"
authors = ["Belden"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/CaptainPalapa/SQLParrot"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sql_parrot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQL Server connectivity (TDS protocol)
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }

# SQLite for local metadata storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

# Hashing for snapshot IDs
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Directories for config file location
dirs = "5.0"

# System information
whoami = "1.5"
